--- a/templates/true_odds/base.html
+++ b/templates/true_odds/base.html
@@ -1,22 +1,12 @@
 
+{% load render_table from django_tables2 %}
+<!doctype html>
+<html>
+    <head>
+        <title>Tips</title>
+    </head>
+    <body>
+        {% render_table true_odds %}
+    </body>
+</html>
 
-{% block title %}
-<title> Home </title>
-{% endblock %}
-{%block body %}
-<div class="container">
-{% for tips in object_list %}
-<h1>Country</h1>
-<p>{{tips.country}}</p>
-
-<h1>Flags</h1>
-<p>{{tips.flags}}</p>
-<h1>Home</h1>
-<p>{{tips.home_team}}</p>
-<h1>Away</h1>
-<p>{{tips.away_team}}</p>
-<h1>Tip</h1>
-<p>{{tips.tips }}</p>
-	{% endfor %}
-</div>
-{% endblock%}
