Query and Displsy a  particular value in my table's Field

--- a/templates/true_odds/base.html
+++ b/templates/true_odds/base.html
@@ -1,14 +1,2 @@
 
-{% load render_table from django_tables2 %}
-<!doctype html>
-<html>
-     <head>
-        <title>Todays Tips</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    </head>
-    <body>
-    	<h1>Todays Odds</h1>
-        {% render_table table %}
-    </body>
-</html>
-
+efsfgdsfsdgsr
