--- a/templates/true_odds/sort_by_id.html
+++ b/templates/true_odds/sort_by_id.html
@@ -1,15 +1,17 @@
-{% extends 'true_odds/base.html'%}
+
 {% load render_table from django_tables2 %}
 <!doctype html>
 <html>
      <head>
-        <title>Tips</title>
+        <title>GGs</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     </head>
     <body>
-    	<h1>Todays Odds</h1>
-        {% render_table table %}
+    	
 
-      
+        <h1> GG </h1>
+          {% render_table table %}
+
+    </body>
 </html>
 
