--- a/templates/true_odds/base.html
+++ b/templates/true_odds/base.html
@@ -1,2 +1,17 @@
+<!DOCTYPE html>
+<html>
 
-efsfgdsfsdgsr
+<head>
+    <title>Betway</title>
+</head>
+
+  <body>
+    <h1> Accurate Professional Football Predictions</h1>
+    <p>xxxx is the best football prediction website in the world. Get access to well researched tips and win more bets! </p>
+    {% block content %} {% endblock content %}
+    <div class="side_bar"> 
+
+</div>
+  </body>
+
+</html>
