--- a/templates/true_odds/sort_by_id.html
+++ b/templates/true_odds/sort_by_id.html
@@ -1,11 +1,13 @@
-
+{% extends 'true_odds/base.html' %}
 {% load render_table from django_tables2 %}
 <!doctype html>
 <html>
+  {% block content %}
      <head>
         <title>GGs</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     </head>
+  
     <body>
     	
 
@@ -13,5 +15,6 @@
           {% render_table table %}
 
     </body>
+    {% endblock %}
 </html>
 
