--- a/templates/true_odds/index.html
+++ b/templates/true_odds/index.html
@@ -9,7 +9,57 @@
     <body>
     	<h1>Todays Tips</h1>
         {% render_table table %}
-
+    <div class="container">
+					<h2>Choose Pricing Plan </h2>
+					<div class="row">
+						<div class="col-md-4 col-sm-6">
+							<div class="single-plan-table table-one">
+								<img src="images/shape.png" alt="">
+								<i class="fa fa-usd" aria-hidden="true"></i>
+								<h6>Basic</h6>
+								<strong><sup>Ksh</sup> 250</strong>
+								<ul>
+									<li>Daily sms of 4 Sure Games</li>
+									<li>Access to Basic Markets</li>
+									<li>Over 80% Accuracy</li>
+								
+								</ul>
+								<a href="#">Select Plan</a>
+							</div> <!-- /.single-plan-table -->
+						</div> <!-- /.col- -->
+						<div class="col-md-4 col-sm-6">
+							<div class="single-plan-table table-two">
+								<img src="images/shape.png" alt="">
+								<i class="fa fa-usd" aria-hidden="true"></i>
+								<h6>Enterprise</h6>
+								<strong><sup>Ksh</sup>500</strong>
+								<ul>
+									<li>Daily sms of 6 Sure Games</li>
+									<li>Access to Essential Markets</li>
+									<li>Over 90% Accuracy</li>
+								
+								</ul>
+								<a href="#">Select Plan</a>
+							</div> <!-- /.single-plan-table -->
+						</div> <!-- /.col- -->
+						<div class="col-md-4 hidden-sm">
+							<div class="single-plan-table table-three">
+								<img src="images/shape.png" alt="">
+								<i class="fa fa-usd" aria-hidden="true"></i>
+								<h6>Unlimited</h6>
+								<strong><sup>Ksh</sup>1000</strong>
+								<ul>
+								<li>Daily sms of 8 Sure Games</li>
+									<li>Access to Pro Markets</li>
+									<li>Over 90% Accuracy</li>
+								</ul>
+								<a href="#">Select Plan</a>
+							</div> <!-- /.single-plan-table -->
+						</div> <!-- /.col- -->
+					</div> <!-- /.row -->
+				</div> <!-- /.container -->
+			
+			
 {% endblock %}      
 </html>
 
